# Smart-Slides-Indexer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CUSTOM_PLUGINS.md  DELIVERY_CHECKLIST.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  INTEGRATION_GUIDE.md  MLIS-102-iii.pptx  QUICK_REFERENCE.md  README.md  README_PPTX_INDEXER.md  START_HERE.md  pyproject.toml  requirements.txt  ssi.py
.github/workflows/: ci.yml
api/: main.py
app/: __init__.py  api.py  config.py  main.py  models.py  optimizer.py  pipeline.py  service.py  storage.py
apps/api/: main.py
apps/cli/: main.py
apps/worker/: indexing.py
cli/: main.py
core/: config.py  llm_adapter.py  observability.py  vector_store.py
data/artifacts/: 04b80c71-ee85-4a00-9432-4de967998da9_parsed_slides.json  0929ba12-2f0f-4367-b08b-99fe2ba92f0d_embeddings.json  0929ba12-2f0f-4367-b08b-99fe2ba92f0d_metadata.json  0929ba12-2f0f-4367-b08b-99fe2ba92f0d_parsed_slides.json  74bb6ad4-15e3-4cd1-a02b-5016ce161846_embeddings.json  74bb6ad4-15e3-4cd1-a02b-5016ce161846_parsed_slides.json  86aba0c3-b7e5-4645-8e73-ced158ef3a58_embeddings.json  86aba0c3-b7e5-4645-8e73-ced158ef3a58_parsed_slides.json
data/output/: graph.json  index.json
docs/: PROJECT_SUMMARY.md  README.md  sample_presentation.pptx
indexed_output/: graph.json  index.json
infra/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  k8s-manifests.yaml
pptx_indexer/: __init__.py  config.py  index_ppt.py  requirements.txt
pptx_indexer/core/: __init__.py  index_builder.py  metadata_extractor.py  parser.py  slide_graph.py  structure_analyzer.py  utils.py
pptx_indexer/examples/: __init__.py  index_ppt.py  query_ppt.py  retrieve.py
pptx_indexer/pipelines/: __init__.py  indexing_pipeline.py  retrieval_pipeline.py
pptx_indexer/plugins/: base_llm.py
pptx_indexer/plugins/default_plugins/: __init__.py  implementations.py
pptx_indexer/schemas/: __init__.py  document_index.py  slide_graph_schema.py  slide_node.py
pptx_indexer/tests/: __init__.py  test_basic.py
src/pptx_indexer/: config.py  llm_adapter.py  observability.py  vector_store.py
src/pptx_indexer/core/: __init__.py  index_builder.py  metadata_extractor.py  parser.py  slide_graph.py  structure_analyzer.py  utils.py
src/pptx_indexer/examples/: index_ppt.py  retrieve.py
src/pptx_indexer/pipelines/: indexing_pipeline.py  retrieval_pipeline.py
src/pptx_indexer/plugins/: __init__.py  base_llm.py
src/pptx_indexer/plugins/default_plugins/: __init__.py  implementations.py
src/pptx_indexer/schemas/: document_index.py  slide_graph_schema.py  slide_node.py
tests/: conftest.py  test_core.py  test_core_coverage.py  test_core_extended.py  test_core_modules.py  test_core_more.py  test_implementations_coverage.py  test_integration.py  test_llm_adapter.py  test_pipelines.py  test_pipelines_complete.py  test_pipelines_coverage.py  test_pipelines_extended.py  test_plugins.py  test_plugins_complete.py  test_plugins_extended.py  test_plugins_more.py  test_retrieval.py  test_schemas.py  test_schemas_extended.py  test_utils.py  test_vector_store.py  test_worker_indexing.py
workers/: indexing.py
